--- a/ImageTrim/RootViewController.xib
+++ b/ImageTrim/RootViewController.xib
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4514" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5053" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RootViewController">
             <connections>
                 <outlet property="imageView" destination="8Wa-DE-HCu" id="h27-ep-xP9"/>
+                <outlet property="ratioLable" destination="e7C-1o-28F" id="yeD-kP-tSL"/>
                 <outlet property="slider" destination="B9c-kK-kwS" id="zFR-Ck-7Lb"/>
                 <outlet property="view" destination="1" id="3"/>
             </connections>
@@ -37,12 +38,15 @@
                         <action selector="tapImageSelectButton:" destination="-1" eventType="touchUpInside" id="sWA-51-RrX"/>
                     </connections>
                 </button>
-                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" id="B9c-kK-kwS">
+                <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.01" maxValue="1" id="B9c-kK-kwS">
                     <rect key="frame" x="26" y="482" width="268" height="34"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
+                    <connections>
+                        <action selector="changeSliderValue:" destination="-1" eventType="valueChanged" id="c2K-OE-Gdi"/>
+                    </connections>
                 </slider>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ratio" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="e7C-1o-28F">
-                    <rect key="frame" x="28" y="453" width="41" height="21"/>
+                    <rect key="frame" x="28" y="453" width="264" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
